# luminolGL

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt~  README.md
assets/: camPos.txt  camSpeeds.txt  camTargets.txt  canyon.json  grass.json  luminolGL.json  ruins.json
assets/splines/: test.txt
assets/textures/: spnza_bricks_a_normal.tga  spnza_bricks_b_diff.tga
cmakeModules/: FindRapidJSON.cmake  Findassimp.cmake
include/: Interpolation.h  Spline3D.h
include/callbacks/: CallbacksManager.hpp
include/data/: SceneIO.hpp  SceneIOJson.hpp  UniformCamera.hpp
include/geometry/: BoundingBox.h  Interpolation.h  ScalarInterpolation.hpp  Spline.h  Spline.tpp  Spline3D.h  Transformation.h
include/graphics/: AssimpModel.hpp  BeautyFBO.hpp  CubeMapTexture.hpp  DebugBoundingBoxes.hpp  DebugDrawer.h  DebugRay.h  FrameBufferObject.hpp  GeometricBuffer.hpp  GeometricFBO.hpp  Mesh.h  MeshInstance.h  ModelMeshGroup.hpp  ModelMeshInstanced.hpp  PostFxFBO.hpp  Scene.h  Shader.hpp  ShaderProgram.hpp  ShadowMapFBO.hpp  Skybox.hpp  Texture.h  TextureHandler.h  UBO.hpp  UBO_keys.hpp  VertexArrayObject.h  VertexBufferObject.h  VertexDescriptor.h
include/gui/: Gui.hpp  ObjectPicker.h  SplinePicker.hpp  UserInput.hpp  gui.hpp
include/lights/: Light.hpp
include/ui/: UserInput.hpp
include/utils/: utils.h
include/view/: CameraController.hpp  CameraFreefly.hpp
lib/: CMakeLists.txt  CMakeLists.txt~
lib/imgui/: DroidSans.cpp  imgui.cpp  imgui.h  imguiRenderGL3.cpp  imguiRenderGL3.h
shaders/: ambient.frag  aogl.frag  aogl.geom  aogl.vert  blit.frag  blit.vert  blur.frag  cameraMotionBlur.frag  coc.frag  debug.frag  debug.vert  directionnalLight.frag  dof.frag  firefly.frag  fog.frag  gammaCorrection.frag  indirectLight.frag  pointLight.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  sobel.frag  spotLight.frag  ssao.frag  ssaoMixBeauty.frag  water.frag  waterReflection.vert  waterReflectionRefraction.vert
src/: Interpolation.cpp  Spline3D.cpp  main.cpp
src/callbacks/: CallbacksManager.cpp
src/data/: SceneIOJson.cpp
src/geometry/: BoundingBox.cpp  Interpolation.cpp  ScalarInterpolation.cpp  Spline3D.cpp  Transformation.cpp
src/graphics/: AssimpModel.cpp  BeautyFBO.cpp  CubeMapTexture.cpp  DebugBoundingBoxes.cpp  DebugDrawer.cpp  DebugRay.cpp  FrameBufferObject.cpp  GeometricBuffer.cpp  GeometricFBO.cpp  Mesh.cpp  MeshInstance.cpp  ModelMeshGroup.cpp  ModelMeshInstanced.cpp  PostFxFBO.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  ShadowMapFBO.cpp  Skybox.cpp  Texture.cpp  TextureHandler.cpp  UBO.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  VertexDescriptor.cpp
src/gui/: Gui.cpp  ObjectPicker.cpp  SplinePicker.cpp  UserInput.cpp  gui.cpp
src/lights/: Light.cpp
src/ui/: UserInput.cpp
(+116 files in other folders)
